--- a/test.css
+++ b/test.css
@@ -1,165 +1,14 @@
-
-/* * {
-
-} */
-
-body {
-    font-family: 'Raleway', Courier, monospace;
-
-    display: flex;
-    flex-direction: column;
-}
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-#marque {
-    flex: 60%;
-}
-
 .nav-up {
     display: flex;
-    flex: 25%;
     justify-content: space-around;
-}
-
-.nav-up li {
-
-}
-
-
-main {
-
-}
-.section {
-    display: flex;
-    flex-direction: column;
-}
-
-#titre {
-
-}
-#vilnatur {
-
-}
-.form {
-
-}
-#choix {
-
-}
-form {
-    display: flex;
-}
-#position {
-    background-color: #F2F2F2;
-}
-#insearch {
-
-}
-#search {
-    border: 1px solid #F2F2F2;
-    border-radius: 0px 10px 10px 0;
-    border-left: none;
-    background-color: skyblue;
-    color: white;
-}
-#filtre {
-    /* display: flex; */    
-    /* On dirait que a cause du id filtre plus bas ceci ne marche pas */
-}
-.filtr {
-    display: flex;
-    justify-content: flex-start;
-    
-}
-.filtr input {
-
-}
-
-label{
-
-}
-
-#eco {
-
-}
-.icon
- {
-
- }
- #autocon {
-
- }
- #famil {
-
- }
- #famcon {
-
- }
- #romant {
-
- }
- #romcon {
-
- }
- #autoriz {
-
- }
- #autocon {
-
- }
- .info {
-
- }
-
- .pilier {
-
- }
- #gdpic {
-
- }
- #hebrgmars {
-
- }
- #grp-pic {
-
- }
- .phototel {
-
- }
- .phototel img {
-
- }
-
- .impic {
-
- }
- .soustitre {
-
- }
- .star {
-
- }
- .inactive {
-
- }
- #afich {
-
- }
- aside {
-
- }
- #popul {
-    display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
- }
- #courb {
-
- }
- .gaside {
-
- }
+}
+.nav-up li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    width: 45%;
+    padding: 2px;
+}
