--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-* { 
-    margin: 0;
-    padding: 0;
-}  
+
     body {
     font-family: 'Raleway', Courier, monospace;
     /* margin-left: 2%;
@@ -39,11 +36,11 @@ header {
 .nav-up {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     text-align: center;
     
     width: 45%;
-    padding: 2px;
+    
     
     
 }
@@ -57,7 +54,7 @@ header {
     /* margin-left: 5px;
     margin-right: 5px; */
     padding: 20px;
-
+    border: 1px solid purple;
 }
 #hebrgmars {
     flex: 100%;
