--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
      padding: 0;
  }
     body {
-    
-    font-family: 'Raleway';
     padding: 0 50px 0 50px;
     margin-top: 0;
 }
@@ -72,7 +70,9 @@ form {
 input {
     /* border: 2px solid #F2F2F2;   c est temporaire le temps d un test */
     font-family:'Raleway', Courier, monospace;
-    padding: 10px;
+    padding: 5px 10px;
+    font-size: 11px;
+    
 }
 main {
     margin: 0 50px 0 50px;
@@ -202,7 +202,7 @@ border-left: none;
 .form {
     display: flex;
     flex-direction: column;
-    font-family: 'Courier New', "Courier", "monospace";
+    /* font-family: 'Courier New', "Courier", "monospace"; */
 }
 
 #famitest {
@@ -323,7 +323,7 @@ aside {
     background-color: #F2F2F2;
     border: 1px solid #F2F2F2;
     max-width: 420px;
-    max-height: 625px;
+    
     margin: 20px;
     
     /* padding: 30px; caché temporairement */
@@ -538,9 +538,9 @@ activite-image {
 /* .li:visited {
     
 } */
-h*, p*, div, label {
+/* h*, p*, div, label {
     font-family: "Raleway";
-}
+} */
 
 
 
