--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  }
     body {
     padding: 0 50px 0 50px;
-    margin-top: 0;
+    /* margin-top: 0; */
     font-family: 'Raleway';
     font-size: 15px;
 }
@@ -392,7 +392,7 @@ footer {
     display: flex;
     justify-content: space-around;
     
-    margin: 10px 50px;
+    /* margin: 10px 50px; */
     padding: 50px 300px 50px 50px;
     background-color:#f2f2f2;
     
