fin d'insert diff balises format mobil

--- a/style.css
+++ b/style.css
@@ -742,7 +742,7 @@ figcaption {
        
         margin: 0;
         padding: 0;
-        border: 1px solid orange;
+        /* border: 1px solid orange; */
 
         }
 
@@ -817,8 +817,11 @@ figcaption {
 
         }
     .filtr {
+        
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: flex-start;
+        
         }
 
     label {
@@ -859,6 +862,9 @@ figcaption {
         }    
 
     .info {
+        margin: 20px;
+        }
+    section {
 
         }
 
@@ -866,6 +872,7 @@ figcaption {
         display: flex;
         flex-direction: column-reverse;
         width: 100%;
+        padding: 0;
         }    
 
     #gdpic {
@@ -935,8 +942,57 @@ figcaption {
           }      
 
           .patrouille {
+
+          }
+          .emplwoan {
+
+          }
+          #fgcs1 {
+
+          }
+          .emplduo {
+
+          }
+          #pfgcd1 {
+
+          }
+          #fgcd1 {
+
+          }
+          #pfgcd2 {
+
+          }
+          #fgcd2 {
+
+          }
+          .soupatrouill {
+
+          }
+          #pfgcs2 {
+
+          }
+          #fgcs2 {
+
+          }
+          figcaption {
+
+          }
+          #pfgcd3 {
+
+          }
+          #fgcd3 {
+
+          }
+          #pfgcd4 {
+
+          }
+          #fgcd4 {
+
+          }
+          footer {
+
+          }
+          .footcat {
               
           }
-
-
 }
