--- a/style.css
+++ b/style.css
@@ -781,7 +781,9 @@ figcaption {
         
         }
     #titre {
-
+        display: flex;
+        font-weight: bolder;
+        font-size: 24px;
         }
     #vilnatur {
 
@@ -949,6 +951,9 @@ figcaption {
           .patrouille {
 
           }
+          .patrouille:nth-child(-n+3) {
+            margin: 0;
+        }  
           .emplwoan {
 
           }
@@ -958,6 +963,11 @@ figcaption {
           .emplduo {
 
           }
+
+          .emplduo:first-child {
+            margin: 0;
+        }
+
           #pfgcd1 {
 
           }
