--- a/style.css
+++ b/style.css
@@ -25,18 +25,22 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    
+    margin: 0 50px 30px 50px;  
     margin: 0 50px;
 }
 #marque {
+    display: flex;
     color: rgb(77, 148, 255);
     font-size: 40px;
     width: 75%;
     /* margin-left: 40px;
     margin-top: 40px;
     margin-bottom: 50px; */
-    
+    padding-left: 40px;
 }    
+#liMarque {
+    display: none;
+}
 
 .nav-up {
     display: flex;
@@ -752,6 +756,9 @@ figcaption {
         }
     #marque {
         color: rgb(77, 148, 255);  
+    }
+    #limarque {
+        
     }
     .nav-up {
 
