--- a/style.css
+++ b/style.css
@@ -753,7 +753,8 @@ figcaption {
         }
 
     header {
-        
+        display: flex;
+        flex-direction: column; 
         margin: 0;
 
         }
@@ -764,7 +765,11 @@ figcaption {
         
     }
     .nav-up {
-
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+        width: 100%;
         }
 
     .nav-up .li {
@@ -782,7 +787,8 @@ figcaption {
 
         }
         #litroi {
-            /* order: -1; */
+            order: -1;
+            display: none;
         }
     main {
             margin: 0px;
