--- a/style.css
+++ b/style.css
@@ -758,11 +758,15 @@ figcaption {
         margin: 0;
 
         }
-    #marque {
-        color: rgb(77, 148, 255);  
+    #marque {  
+        color: rgb(77, 148, 255);
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
     }
     #limarque {
-        
+        display: flex;
+        font-size: 15px;
     }
     .nav-up {
         display: flex;
