--- a/style.css
+++ b/style.css
@@ -699,7 +699,7 @@ figcaption {
 
 #fgcd3 {
     width: 100%;
-    height: 134px;
+    height: 135px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
@@ -892,7 +892,7 @@ figcaption {
         }
 
     .phototel {
-
+        margin: 10px;
         }
 
     .soustitre {
@@ -925,8 +925,8 @@ figcaption {
 
         }
     figure img {
-        max-width: 325px;
-        max-height: 115px;
+        max-width: 335px;
+        max-height: 135px;
         }
     .haside {
 
@@ -952,13 +952,13 @@ figcaption {
             margin: 0;
         }  
           .emplwoan {
-
+            margin: 10px 5px;
           }
           #fgcs1 {
 
           }
           .emplduo {
-
+            margin: 10px 5px;
           }
 
           .emplduo:first-child {
@@ -969,19 +969,11 @@ figcaption {
 
           }
           #fgcd1 {
-            max-width: 335px;
-            max-height: 135px;
+            /* max-width: 335px;
+            max-height: 135px; */
             }
 
-          
-            
-
-
-
-
-            /*accolade en bas est bizarre donc on a mis tout dedans pour test  */
-
-#pfgcd2 {
+          #pfgcd2 {
 
           }
           #fgcd2 {
