--- a/style.css
+++ b/style.css
@@ -762,7 +762,8 @@ figcaption {
 
         #liun {
             flex: 50%;
-            border-bottom: 5px solid #F2F2F2;
+        /*  border-bottom: 5px solid #F2F2F2;   exceptionnellement je desactive cette couleur black pour montrer la difference d actions */
+            border-bottom: 5px solid #0065FC;
             padding: 20px;
         /*  color: black;   exceptionnellement je desactive cette couleur black pour montrer la difference d actions*/
             color: #0065FC;
